force-app/main/default/objects/QuoteLineItem/fields/crms11__Account_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Account_Discount__c</fullName>
    <description>Applied account discount.</description>
    <inlineHelpText>Applied account discount.</inlineHelpText>
    <label>Account Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>