force-app/main/default/objects/QuoteLineItem/fields/crms11__Approval_Quantity__c.field-meta.xml
<CustomField>
    <fullName>crms11__Approval_Quantity__c</fullName>
    <label>Approval Quantity</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>