force-app/main/default/objects/QuoteLineItem/fields/crms11__Client_Price__c.field-meta.xml
<CustomField>
    <fullName>crms11__Client_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is automatically set to true if the product has a Client Price set on the Account</description>
    <inlineHelpText>This checkbox is automatically set to true if the product has a Client Price set on the Account</inlineHelpText>
    <label>Client Price</label>
    <type>Checkbox</type>
</CustomField>