force-app/main/default/objects/QuoteLineItem/fields/crms11__Collapse__c.field-meta.xml
<CustomField>
    <fullName>crms11__Collapse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapse</label>
    <type>Checkbox</type>
</CustomField>