force-app/main/default/objects/QuoteLineItem/fields/crms11__Connected_Quantity_Master_GUID__c.field-meta.xml
<CustomField>
    <fullName>crms11__Connected_Quantity_Master_GUID__c</fullName>
    <label>Connected Quantity Master GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>