force-app/main/default/objects/QuoteLineItem/fields/crms11__Do_Not_Renew__c.field-meta.xml
<CustomField>
    <fullName>crms11__Do_Not_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Renew</label>
    <type>Checkbox</type>
</CustomField>