force-app/main/default/objects/QuoteLineItem/fields/crms11__Floor_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Floor_Discount__c</fullName>
    <label>Floor Discount</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>