force-app/main/default/objects/QuoteLineItem/fields/crms11__Floor_Quantity_X__c.field-meta.xml
<CustomField>
    <fullName>crms11__Floor_Quantity_X__c</fullName>
    <label>Floor Quantity X</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>