force-app/main/default/objects/QuoteLineItem/fields/crms11__Group_IDs__c.field-meta.xml
<CustomField>
    <fullName>crms11__Group_IDs__c</fullName>
    <label>Group IDs</label>
    <length>50</length>
    <type>Text</type>
</CustomField>