force-app/main/default/objects/QuoteLineItem/fields/crms11__GUID__c.field-meta.xml
<CustomField>
    <fullName>crms11__GUID__c</fullName>
    <label>GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>