force-app/main/default/objects/QuoteLineItem/fields/crms11__Has_Fixed_Volume_Rate__c.field-meta.xml
<CustomField>
    <fullName>crms11__Has_Fixed_Volume_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Fixed Volume Rate</label>
    <type>Checkbox</type>
</CustomField>