force-app/main/default/objects/QuoteLineItem/fields/crms11__Is_Greener_Sell__c.field-meta.xml
<CustomField>
    <fullName>crms11__Is_Greener_Sell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Greener Sell</label>
    <type>Checkbox</type>
</CustomField>