force-app/main/default/objects/QuoteLineItem/fields/crms11__Is_Incompatible__c.field-meta.xml
<CustomField>
    <fullName>crms11__Is_Incompatible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Incompatible</label>
    <type>Checkbox</type>
</CustomField>