force-app/main/default/objects/QuoteLineItem/fields/crms11__Is_Upsell__c.field-meta.xml
<CustomField>
    <fullName>crms11__Is_Upsell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Upsell</label>
    <type>Checkbox</type>
</CustomField>