force-app/main/default/objects/QuoteLineItem/fields/crms11__Matrix_Price__c.field-meta.xml
<CustomField>
    <fullName>crms11__Matrix_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matrix Price</label>
    <type>Checkbox</type>
</CustomField>