force-app/main/default/objects/QuoteLineItem/fields/crms11__Original_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>crms11__Original_Product_ID__c</fullName>
    <label>Original Product ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>