force-app/main/default/objects/QuoteLineItem/fields/crms11__Original_Quantity_Z__c.field-meta.xml
<CustomField>
    <fullName>crms11__Original_Quantity_Z__c</fullName>
    <label>Original Quantity Z</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>