force-app/main/default/objects/QuoteLineItem/fields/crms11__Persistent_Multiple_of_Master__c.field-meta.xml
<CustomField>
    <fullName>crms11__Persistent_Multiple_of_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Persistent Multiple of Master</label>
    <type>Checkbox</type>
</CustomField>