force-app/main/default/objects/QuoteLineItem/fields/crms11__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>crms11__Product_Type__c</fullName>
    <label>Product Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>