force-app/main/default/objects/QuoteLineItem/fields/crms11__Quantity_Y__c.field-meta.xml
<CustomField>
    <fullName>crms11__Quantity_Y__c</fullName>
    <description>User Entered Quantity Rate Multiplier 1</description>
    <inlineHelpText>User Entered Quantity Rate Multiplier 1</inlineHelpText>
    <label>Quantity Y</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>