force-app/main/default/objects/QuoteLineItem/fields/crms11__Sales_Price_Edit_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Sales_Price_Edit_Discount__c</fullName>
    <description>Discount applied on original sales price.</description>
    <inlineHelpText>Discount applied on original sales price.</inlineHelpText>
    <label>Sales Price Edit Discount</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>