force-app/main/default/objects/QuoteLineItem/fields/crms11__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>crms11__Sort_Order__c</fullName>
    <description>This field holds the sort order of quote line item on Flexpricer page.</description>
    <inlineHelpText>This field holds the sort order of quote line item on Flexpricer page.</inlineHelpText>
    <label>FlexPricer Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>