force-app/main/default/objects/QuoteLineItem/fields/crms11__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>crms11__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>