force-app/main/default/objects/QuoteLineItem/fields/crms11__Sync_Id__c.field-meta.xml
<CustomField>
    <fullName>crms11__Sync_Id__c</fullName>
    <formula>IF( Quote.IsSyncing 
,QuoteId+&apos;-&apos;+PricebookEntryId+&apos;-&apos;+TEXT(CEILING(Quantity))+&apos;-&apos;+TEXT(CEILING(UnitPrice))+&apos;-&apos;+TEXT(CEILING(Discount))+&apos;-&apos;+Description  
,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync_Id</label>
    <type>Text</type>
</CustomField>