force-app/main/default/objects/QuoteLineItem/fields/crms11__TDT_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__TDT_Discount__c</fullName>
    <label>TDT Discount</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>