force-app/main/default/objects/QuoteLineItem/fields/crms11__TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>crms11__TotalPrice__c</fullName>
    <formula>( Quantity *  UnitPrice ) - ( ( Quantity *  UnitPrice ) * Discount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom TotalPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>