force-app/main/default/objects/QuoteLineItem/fields/crms11__Translation__c.field-meta.xml
<CustomField>
    <fullName>crms11__Translation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Translation</label>
    <referenceTo>crms11__Translation__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>