force-app/main/default/objects/QuoteLineItem/fields/crms11__Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>crms11__Unit_Cost__c</fullName>
    <description>Stores the unit cost of the product.</description>
    <label>Unit Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>